--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </style>
   </head>
   <body>
-    <canvas class="crt" width=720 height=400></canvas>
+    <canvas class="crt" width=720 height=400 style="width: 360px; height: 400px"></canvas>
     <script src="webgl.js"></script>
     <script src="main.js"></script>
   </body>
